--- a/en/speare.html
+++ b/en/speare.html
@@ -26,7 +26,7 @@
 
     <div class="jumbotron">
         <p><img src="../images/speare/logo.png" style="width: 120px;" /></p>
-        <h1>Speare<br><em>Version 1.2.74 </em></h1>
+        <h1>Speare<br><em>Version 1.2.93 </em></h1>
         <p class="lead">
 <a href="http://www.sevenuc.com/en/speare.html">Speare code editor</a> is a small, free and friendly code editor, and a really ultra light IDE (less than 7MB). You can use it to edit all kinds of text file, programming and debugging with almost all common programming languages. It designed to make programming feels light, simple and free. Speare code editor not only has an efficient code navigation and call routines tracing ability but also has flexibility to extend the IDE to support special developing requirements and easily to add a new programming language in it. Speare code editor includes <a href="debugger.html" target="_blank">builtin debugging environment</a> for C, C++, Ruby, mruby, Lua, Python, PHP, Perl and Tcl, and give you complete freedom to control and customise a debugging environment for any programming language.</p>
     </div>
@@ -93,13 +93,39 @@
 <p class="green">Crafting software as small as possible.  →  <a href="debugger.html#whyc" target="_blank">Why C is the returned king of programming languages.</a></p>
 
 
-<h2>Screenshot</h2>
-<a href="../images/speare/0.png" target="_blank"><img src="../images/speare/0.png" class="screenshots"/></a><br>
-<!--a href="../images/speare/9.png" target="_blank"><img src="../images/speare/9.png" class="screenshots"/></a><br-->
-<a href="../images/speare/1.png" target="_blank"><img src="../images/speare/1.png" class="screenshots"/></a><br>
-<a href="../images/speare/2.png" target="_blank"><img src="../images/speare/2.png" class="screenshots"/></a><br>
-<!--a href="../images/speare/3.png" target="_blank"><img src="../images/speare/3.png" class="screenshots"/></a><br-->
-<br>
+<h2>Screenshots</h2>
+<div class="screenshots">
+<div class="row">
+   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="../images/speare/0.png" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/speare/1.png" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="../images/speare/2.png" alt="Third slide">
+    </div>  
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+  </div>
+</div>
+</div>
+
+<p><br><br></p>
 
 
 <h2>Features</h2>
