--- a/en/codeeditor.html
+++ b/en/codeeditor.html
@@ -34,8 +34,8 @@
 <p><a href="../images/ParaOS.png" target="_blank"><img src="../images/ParaOS.png" class="screenshots"></a><br>
 </p>
 
-<p>iCodeEditor has been renamed to iPowerReader. <br>
-Please forward to there:<a href="powerreader.html"> powerreader.html</a></p>
+<p>iCodeEditor has been renamed to iOSFinder. <br>
+Please forward to there: <a href="iosfinder.html"> iosfinder.html</a></p>
 <p><br></p>
 
 </div> 
